--- a/src/globals.css
+++ b/src/globals.css
@@ -57,3 +57,62 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+.all {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.div {
+  position: relative;
+  width: 100%;
+}
+
+.input {
+  font-size: 14px;
+  color: #222222;
+  width: 100%;
+  border: none;
+  border-bottom: solid #aaaaaa 1px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  position: relative;
+  background: none;
+  z-index: 5;
+}
+
+.input::placeholder { color: #aaaaaa; }
+.input:focus { outline: none; }
+
+.span {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0%;  /* right로만 바꿔주면 오 - 왼 */
+  background-color: #666;
+  width: 0;
+  height: 2px;
+  border-radius: 2px;
+  transition: 0.5s;
+}
+
+.label {
+  position: absolute;
+  color: #aaa;
+  left: 14px;
+  font-size: 14px;
+  bottom: 8px;
+  transition: all .2s;
+}
+
+.input:focus ~ .label, .input:valid ~ .label {
+  font-size: 12px;
+  bottom: 40px;
+  color: #666;
+  font-weight: bold;
+}
+
+.input:focus ~ .span, .input:valid ~ .span {
+  width: 100%;
+}
