testerOK question, choice X
db, test-detail 연결중

--- a/src/globals.css
+++ b/src/globals.css
@@ -12,7 +12,7 @@
   --logo_orange: #ffc000;
 
   --light_blue: #d9ebf2;
-  --light_gray: #ededed;
+  --light_gray: #f3f3f3;
   --gray: #c9c9c9;
   --dark_gray: #757575;
 }
